--- a/testing/plotly_barchart_data.ipynb
+++ b/testing/plotly_barchart_data.ipynb
@@ -597,7 +597,7 @@
     {
      "data": {
       "text/plain": [
-       "<pandas.core.groupby.generic.DataFrameGroupBy object at 0x0000026CCD12CB20>"
+       "<pandas.core.groupby.generic.DataFrameGroupBy object at 0x000001FF4BA47070>"
       ]
      },
      "execution_count": 8,
@@ -611,7 +611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "9173f868",
    "metadata": {},
    "outputs": [],
@@ -621,7 +621,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "b309d6c2",
    "metadata": {},
    "outputs": [
@@ -752,7 +752,7 @@
        "[1749 rows x 4 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -763,7 +763,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "9f6e37c4",
    "metadata": {},
    "outputs": [
@@ -843,7 +843,7 @@
        "3463  Wyoming  Male  2014-01-01  211.160518"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -854,17 +854,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "d0c92ea4",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<pandas.core.groupby.generic.DataFrameGroupBy object at 0x0000026CCD14BCA0>"
+       "<pandas.core.groupby.generic.DataFrameGroupBy object at 0x000001FF4BA47E20>"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -875,7 +875,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "d7327d53",
    "metadata": {},
    "outputs": [
@@ -1006,7 +1006,7 @@
        "[1749 rows x 4 columns]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1017,7 +1017,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "9a3339b7",
    "metadata": {},
    "outputs": [
@@ -1143,7 +1143,296 @@
        "[1749 rows x 3 columns]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# df3.set_index(\"Year\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "72fe8d7c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df3 = df3[[\"Year\", \"Location\", \"Mx\", \"Sex\"]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "b7554151",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Year</th>\n",
+       "      <th>Location</th>\n",
+       "      <th>Mx</th>\n",
+       "      <th>Sex</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1981-01-01</td>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>355.090053</td>\n",
+       "      <td>Male</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1982-01-01</td>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>350.125517</td>\n",
+       "      <td>Male</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1983-01-01</td>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>347.808291</td>\n",
+       "      <td>Male</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1984-01-01</td>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>351.763010</td>\n",
+       "      <td>Male</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1985-01-01</td>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>353.813274</td>\n",
+       "      <td>Male</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3459</th>\n",
+       "      <td>2010-01-01</td>\n",
+       "      <td>Wyoming</td>\n",
+       "      <td>210.542330</td>\n",
+       "      <td>Male</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3460</th>\n",
+       "      <td>2011-01-01</td>\n",
+       "      <td>Wyoming</td>\n",
+       "      <td>210.169851</td>\n",
+       "      <td>Male</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3461</th>\n",
+       "      <td>2012-01-01</td>\n",
+       "      <td>Wyoming</td>\n",
+       "      <td>207.857137</td>\n",
+       "      <td>Male</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3462</th>\n",
+       "      <td>2013-01-01</td>\n",
+       "      <td>Wyoming</td>\n",
+       "      <td>208.861532</td>\n",
+       "      <td>Male</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3463</th>\n",
+       "      <td>2014-01-01</td>\n",
+       "      <td>Wyoming</td>\n",
+       "      <td>211.160518</td>\n",
+       "      <td>Male</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1749 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            Year Location          Mx   Sex\n",
+       "0     1981-01-01  Alabama  355.090053  Male\n",
+       "1     1982-01-01  Alabama  350.125517  Male\n",
+       "2     1983-01-01  Alabama  347.808291  Male\n",
+       "3     1984-01-01  Alabama  351.763010  Male\n",
+       "4     1985-01-01  Alabama  353.813274  Male\n",
+       "...          ...      ...         ...   ...\n",
+       "3459  2010-01-01  Wyoming  210.542330  Male\n",
+       "3460  2011-01-01  Wyoming  210.169851  Male\n",
+       "3461  2012-01-01  Wyoming  207.857137  Male\n",
+       "3462  2013-01-01  Wyoming  208.861532  Male\n",
+       "3463  2014-01-01  Wyoming  211.160518  Male\n",
+       "\n",
+       "[1749 rows x 4 columns]"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "fb491c6f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Location</th>\n",
+       "      <th>Mx</th>\n",
+       "      <th>Sex</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Year</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1981-01-01</th>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>355.090053</td>\n",
+       "      <td>Male</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1982-01-01</th>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>350.125517</td>\n",
+       "      <td>Male</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1983-01-01</th>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>347.808291</td>\n",
+       "      <td>Male</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1984-01-01</th>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>351.763010</td>\n",
+       "      <td>Male</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1985-01-01</th>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>353.813274</td>\n",
+       "      <td>Male</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2010-01-01</th>\n",
+       "      <td>Wyoming</td>\n",
+       "      <td>210.542330</td>\n",
+       "      <td>Male</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2011-01-01</th>\n",
+       "      <td>Wyoming</td>\n",
+       "      <td>210.169851</td>\n",
+       "      <td>Male</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2012-01-01</th>\n",
+       "      <td>Wyoming</td>\n",
+       "      <td>207.857137</td>\n",
+       "      <td>Male</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2013-01-01</th>\n",
+       "      <td>Wyoming</td>\n",
+       "      <td>208.861532</td>\n",
+       "      <td>Male</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2014-01-01</th>\n",
+       "      <td>Wyoming</td>\n",
+       "      <td>211.160518</td>\n",
+       "      <td>Male</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1749 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           Location          Mx   Sex\n",
+       "Year                                 \n",
+       "1981-01-01  Alabama  355.090053  Male\n",
+       "1982-01-01  Alabama  350.125517  Male\n",
+       "1983-01-01  Alabama  347.808291  Male\n",
+       "1984-01-01  Alabama  351.763010  Male\n",
+       "1985-01-01  Alabama  353.813274  Male\n",
+       "...             ...         ...   ...\n",
+       "2010-01-01  Wyoming  210.542330  Male\n",
+       "2011-01-01  Wyoming  210.169851  Male\n",
+       "2012-01-01  Wyoming  207.857137  Male\n",
+       "2013-01-01  Wyoming  208.861532  Male\n",
+       "2014-01-01  Wyoming  211.160518  Male\n",
+       "\n",
+       "[1749 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1154,13 +1443,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 22,
    "id": "c3eaffb0",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Exporting cleaned cancer data to .csv\n",
-    "df2.to_csv(\"../Out_data_states/plotlybar.csv\", encoding='utf-8', index = True, header=True)"
+    "df2.to_csv(\"../Out_data_states/plotlybar.csv\", encoding='utf-8', index = False, header=True)"
    ]
   },
   {
