--- a/testing/plotly_barchart_data.ipynb
+++ b/testing/plotly_barchart_data.ipynb
@@ -597,7 +597,7 @@
     {
      "data": {
       "text/plain": [
-       "<pandas.core.groupby.generic.DataFrameGroupBy object at 0x000001FF4BA47070>"
+       "<pandas.core.groupby.generic.DataFrameGroupBy object at 0x00000165A7E35460>"
       ]
      },
      "execution_count": 8,
@@ -861,7 +861,7 @@
     {
      "data": {
       "text/plain": [
-       "<pandas.core.groupby.generic.DataFrameGroupBy object at 0x000001FF4BA47E20>"
+       "<pandas.core.groupby.generic.DataFrameGroupBy object at 0x00000165A7E4A5B0>"
       ]
      },
      "execution_count": 12,
@@ -1020,141 +1020,14 @@
    "execution_count": 14,
    "id": "9a3339b7",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Location</th>\n",
-       "      <th>Sex</th>\n",
-       "      <th>Mx</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Year</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>1981-01-01</th>\n",
-       "      <td>Alabama</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>355.090053</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1982-01-01</th>\n",
-       "      <td>Alabama</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>350.125517</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1983-01-01</th>\n",
-       "      <td>Alabama</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>347.808291</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1984-01-01</th>\n",
-       "      <td>Alabama</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>351.763010</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1985-01-01</th>\n",
-       "      <td>Alabama</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>353.813274</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2010-01-01</th>\n",
-       "      <td>Wyoming</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>210.542330</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2011-01-01</th>\n",
-       "      <td>Wyoming</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>210.169851</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2012-01-01</th>\n",
-       "      <td>Wyoming</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>207.857137</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2013-01-01</th>\n",
-       "      <td>Wyoming</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>208.861532</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2014-01-01</th>\n",
-       "      <td>Wyoming</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>211.160518</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>1749 rows × 3 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "           Location   Sex          Mx\n",
-       "Year                                 \n",
-       "1981-01-01  Alabama  Male  355.090053\n",
-       "1982-01-01  Alabama  Male  350.125517\n",
-       "1983-01-01  Alabama  Male  347.808291\n",
-       "1984-01-01  Alabama  Male  351.763010\n",
-       "1985-01-01  Alabama  Male  353.813274\n",
-       "...             ...   ...         ...\n",
-       "2010-01-01  Wyoming  Male  210.542330\n",
-       "2011-01-01  Wyoming  Male  210.169851\n",
-       "2012-01-01  Wyoming  Male  207.857137\n",
-       "2013-01-01  Wyoming  Male  208.861532\n",
-       "2014-01-01  Wyoming  Male  211.160518\n",
-       "\n",
-       "[1749 rows x 3 columns]"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# df3.set_index(\"Year\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 15,
    "id": "72fe8d7c",
    "metadata": {},
    "outputs": [],
@@ -1164,7 +1037,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 16,
    "id": "b7554151",
    "metadata": {},
    "outputs": [
@@ -1295,7 +1168,7 @@
        "[1749 rows x 4 columns]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1306,7 +1179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 17,
    "id": "fb491c6f",
    "metadata": {},
    "outputs": [
@@ -1432,7 +1305,7 @@
        "[1749 rows x 3 columns]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1443,13 +1316,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 18,
    "id": "c3eaffb0",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Exporting cleaned cancer data to .csv\n",
-    "df2.to_csv(\"../Out_data_states/plotlybar.csv\", encoding='utf-8', index = False, header=True)"
+    "df3.to_csv(\"../Out_data_states/plotlybar.csv\", encoding='utf-8', index = False, header=True)"
    ]
   },
   {
